--- a/templates/gymonline.html
+++ b/templates/gymonline.html
@@ -17,10 +17,10 @@
           <div class="portfolio-item mx-auto"> <!--data-toggle="modal" data-target="#portfolioModal1"-->
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <a href="/coffee"><i class="fas fa-plus fa-3x"></i></a>
+                <a href="/gymonline"><i class="fas fa-plus fa-3x"></i></a>
               </div>
             </div>
-            <img class="img-fluid" src="oli.jpg" alt="coffee">
+            <img class="img-fluid" src="../static/img/purpleb.png" alt="superior">
           </div>
         </div>
         <!-- Portfolio Item 2 -->
@@ -73,10 +73,10 @@
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
                 
- {% if tipo == "Americano": %}
-                El americano se prepara con la base de expresso y dos partes de agua caliente.
-  {% elif tipo == "Latte": %}
-                El latte se prepara con una carga de expresso y dos partes de leche cremada.
+ {% if tipo == "Superior": %}
+                Parte del tronco hasta la cabeza.
+  {% elif tipo == "Inferior": %}
+                Parte de la cadera hasta los pies.
   {% endif %}
               </p>
               </div>
