--- a/templates/index.html
+++ b/templates/index.html
@@ -92,10 +92,10 @@
           <div class="portfolio-item mx-auto">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <a href="/coffee"><i class="fas fa-plus fa-3x"></i></a>
+                <a href="/gymonline.html"><i class="fas fa-plus fa-3x"></i></a>
               </div>
             </div>
-            <img class="img-fluid" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pngocean.com%2Fsearch%3Fpng%3Dl%25C3%25ADnea%2Bde%2Bla%2Bbarra%26page%3D268&psig=AOvVaw0KfuO7bz_gmi0lb1m0JmfN&ust=1589941130775000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCLCW1LfuvukCFQAAAAAdAAAAABAL" alt="superior">
+            <img class="img-fluid" src="../static/img/purpleb.png" alt="superior">
           </div>
         </div>
 
